# project_data_downloader

./: .gitignore  .pre-commit-config.yaml  API_README.md  CLAUDE.md  Dockerfile  GPT_OPTIMIZATION_SUMMARY.md  LOCATION_MAP_CREATION.md  README.md  STREAMLIT_PHASE1_SUMMARY.md  STREAMLIT_README.md  UNIFIED_API_IMPLEMENTATION.md  api_client.py  cad_export.py  docker-compose.yml  enhanced_data_selection.py  enhanced_download_manager.py  enhanced_map.py  fema_gis_download.py  main.py  my_project.yaml  pyproject.toml  requirements.txt  requirements_streamlit.txt  settings_manager.py  setup.bat  start.bat  start_api.py  start_streamlit.py  streamlit_app.py  test_api.py  test_project.yaml  unified_map.py
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  file-navigator.md  streamlit-app-builder.md
.github/workflows/: ci.yml
api/: job_manager.py  main.py  models.py
app/: CLAUDE.md  Makefile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  streamlit_app.py
app/api/: __init__.py  job_manager.py  main.py
app/config/: api.env.example  project_template.yaml
app/data/: aoi.dbf  aoi.shp  aoi.shx
app/docs/: API_USAGE.md  DASHBOARD_IMPLEMENTATION_PLAN.md  DEPLOYMENT_GUIDE.md  MAIN_USAGE.md  agents.md
app/examples/: demo_noaa_atlas14.py  demo_pdf_feature.py
app/src/analysis/: __init__.py  dashboard_calculator.py  flood_analyzer.py
app/src/downloaders/: __init__.py  fema_downloader.py  noaa_atlas14_downloader.py  usgs_lidar_downloader.py
app/src/geospatial_downloader/: __init__.py
app/src/utils/: date_utils.py  spatial_utils.py
app/tests/: conftest.py  test_dem_processing.py  test_pdf_generation.py  test_pdf_layout.py
app/tests/integration/: test_streamlit_basic.py  test_streamlit_integration.py
app/tests/unit/: test_exceptions.py
config/: example_project.yaml  project_template.yaml  settings.yaml  streamlit_config.py  user_settings.json
core/: __init__.py  aoi_manager.py  base_downloader.py  data_processor.py
data/: aoi.qmd
docs/: API_USAGE.md  CUSTOM_GPT_INSTRUCTIONS.md  CUSTOM_GPT_SETUP_GUIDE.md  DEPLOYMENT_CHECKLIST.md  FASTAPI_BACKEND_ANALYSIS.md  README.md
downloaders/: __init__.py  fema_downloader.py  noaa_atlas14_downloader.py  usgs_lidar_downloader.py
examples/: demo_noaa_atlas14.py  demo_pdf_feature.py
src/core/: base_downloader.py  data_processor.py
src/downloaders/: fema_downloader.py  noaa_atlas14_downloader.py  usgs_lidar_downloader.py
src/geospatial_downloader/shared/exceptions/: __init__.py  exceptions.py
src/utils/: download_utils.py  pdf_utils.py  spatial_utils.py
tests/: __init__.py  test_contours.py  test_dem_processing.py  test_pdf_generation.py  test_pdf_layout.py
tests/integration/: test_streamlit_drawing_tools.py
utils/: location_map_exhibit.py  pdf_utils.py  spatial_utils.py
